# pi-builder

./: .eslintrc.js  .gitignore  AGENTS.md  AGENT_OBSERVABILITY_INTEGRATION.md  AUTOMAKER_REVERSE_ENGINEERING.md  AUTO_MAKER_ANALYSIS.md  AWESOME_CLI_AGENTS_ANALYSIS.md  BUILD_REPORT.md  CODEX_OLLAMA_LMSTUDIO_ADDED.md  COMPREHENSIVE_RESEARCH_REPORT.md  CONTRIBUTING.md  DEEP_RESEARCH_AUTOMAKER.md  DEPLOYMENT_GUIDE.md  ENHANCEMENT_ROADMAP.md  EXECUTIVE_SUMMARY.txt  EXTENDED_EXECUTION_PLAN.md  EXTENDED_SESSION_FINAL_SUMMARY.md  FINAL_DELIVERY_REPORT.md  FINAL_PROJECT_SUMMARY.md  FIX_REMAINING_ISSUES.sh  GITHUB_LAUNCH_GUIDE.md  IMPLEMENTATION_SPEC.md  INTEGRATION_GUIDE.md  LAUNCH_ANNOUNCEMENT.md  LICENSE  PHASES_5_6_COMPLETE.md  PHASES_5_9_COMPLETE_FINAL.md  PHASE_1_IMPLEMENTATION_COMPLETE.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  PHASE_4_COMPLETE_LAUNCH_READY.md  PHASE_5_ADVANCED_FEATURES.md  PHASE_5_COMPLETE_SUMMARY.md  PHASE_5_QUICKSTART.md  PHASE_5_STATUS.md  PHASE_5_TO_9_COMPLETE_IMPLEMENTATION.md  PI_BUILDER_VS_AUTOMAKER_COMPARISON.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  (+11 more)
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  worktree.rs
docs/: START_HERE.md  pi-mono-discord-proposal.md
extensions/: pi-builder-bridge.ts  trading-signals.ts
scripts/: dev.mjs  e2b-validate.py  reflect.sh  smoke-test.mjs
src/: add.ts  extension.ts
test-state/: multi-track.json  proj-1.json  proj-2.json  proj-3.json  proj-4.json  proj-5.json  (+2 more)
(+26 files in other folders)
