[package]
name = "pi-builder-desktop"
version = "0.1.0"
description = "pi-builder desktop — PTY multiplexer for CLI coding agents"
authors = ["arosstale"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pi_builder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pi-builder-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
portable-pty = "0.8"
git2         = { version = "0.19", default-features = false, features = ["vendored-openssl"] }
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
uuid         = { version = "1", features = ["v4"] }
log          = "0.4"
env_logger   = "0.11"

[features]
# Desktop-only — no custom-protocol needed for dev, only production
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level    = "z"
lto          = true
codegen-units = 1
panic        = "abort"
strip        = true
